[package]
name = "token-transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "2.0.1"
spl-token = { version = "6.0.0", features = [ "no-entrypoint" ] }
borsh = "1.5.1"

[dev-dependencies]
solana-sdk = "2.0.1"
solana-program-test = "2.0.1"


[lib]
crate-type = ["cdylib", "lib"]